--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
         android:theme="@style/Theme.HealthHub"
         tools:targetApi="31">
         <activity
-            android:name=".OrderDetailsActivity"
+            android:name=".RegisterActivity"
             android:exported="false" />
         <activity
             android:name=".CartBuyMedicineActivity"
@@ -33,7 +33,7 @@
             android:name=".HealthArticlesDetailsActivity"
             android:exported="false" />
         <activity
-            android:name=".BuyMedicineActivity"
+            android:name=".OrderDetailsActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
