--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,6 +39,7 @@ android {
 }
 
 dependencies {
+    implementation 'com.github.bumptech.glide:glide:4.12.0'
     implementation 'org.jetbrains.kotlin:kotlin-stdlib:1.8.21'
     implementation 'androidx.core:core-ktx:1.10.1'
     implementation 'androidx.appcompat:appcompat:1.6.1'
