--- a/local.properties
+++ b/local.properties
@@ -5,4 +5,4 @@
 # For customization when using a Version Control System, please read the
 # header note.
 #Sun May 21 11:09:56 PST 2023
-sdk.dir=C\:\\Users\\emika\\AppData\\Local\\Android\\Sdk
+sdk.dir=C\:\\Users\\Emmanuel\\AppData\\Local\\Android\\Sdk
